--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body {
+    background-color: rgba(0, 0, 0, 0.945);
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    color: white;
 }
 
 header {
@@ -19,4 +21,17 @@ header {
 header h1 {
     padding-top: 100px;
     font-weight: bolder;
+}
+
+.players {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.player-img img {
+    height: 300px;
+    width: 250px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
